fix: add word-wrap for question and answer text

--- a/src/components/learn/learn.module.scss
+++ b/src/components/learn/learn.module.scss
@@ -23,3 +23,8 @@
     text-align: center;
   }
 }
+
+.questionText,
+.answerText {
+  word-wrap: break-word;
+}
